MDEV-12364 Server crashes in __memcpy_sse2_unaligned / String::copy on JSON_SEARCH with variables.

Wrong index for the tmp_paths array in
        Item_func_json_search::val_str.